Improved ui and instructions

--- a/proc_vis.sass
+++ b/proc_vis.sass
@@ -117,17 +117,17 @@ td
   &.control
     stroke: #500
     &.high
-      stroke: #f00
+      stroke: #5aa
 
   &.data
     stroke: #005
     &.high
-      stroke: #00f
+      stroke: #aa5
 
   &.address
     stroke: #050
     &.high
-      stroke: #0f0
+      stroke: #a5a
 
   &.background
     //stroke: white
