--- a/proc_vis.sass
+++ b/proc_vis.sass
@@ -4,6 +4,7 @@ body
   display: flex
   justify-content: space-around
   max-width: 100vw
+  //max-height: 100vh
   flex-wrap: wrap
 
 .box
@@ -18,8 +19,11 @@ svg
 
 .instructions
   flex: 1
+  display: flex
+  flex-direction: column
   background-color: grey
   min-width: 33%
+  max-height: 100vh
 
 .button
   &:hover>.clock-button
@@ -84,9 +88,11 @@ svg
 
 .ram, .register, .alu
   &.read
+    color: darkred
     stroke: darkred
     fill: indianred
   &.write
+    color: darkblue
     stroke: darkblue
     fill: cornflowerblue
 
@@ -119,20 +125,60 @@ td
   stroke-width: 3px
 
   &.control
-    stroke: #a11
+    stroke: #e11
+    color: #e11
     &.high
-      stroke: #1aa
+      color: #1ee
+      stroke: #1ee
 
-  &.data
-    stroke: #11a
+  &.data, &.address
+    stroke: #11e
+    color: #11e
     &.high
-      stroke: #aa1
+      color: #ee1
+      stroke: #ee1
 
-  &.address
-    stroke: #1a1
+  //&.address
+    color: #1e1
+    stroke: #1e1
     &.high
-      stroke: #a1a
+      color: #e1e
+      stroke: #e1e
 
   &.background
     //stroke: white
     stroke-width: 4px
+
+.tab
+  overflow: hidden
+  border: 1px solid #ccc
+  background-color: #f1f1f1
+
+
+/* Style the buttons that are used to open the tab content */
+.tab button
+  background-color: inherit
+  float: left
+  border: none
+  outline: none
+  cursor: pointer
+  padding: 14px 16px
+  transition: 0.3s
+
+
+.tab button:hover
+  background-color: #ddd
+
+.tab button.active
+  background-color: #ccc
+
+.tabcontent
+  display: none
+  padding: 6px 12px
+  border: 1px solid #ccc
+  border-top: none
+  overflow-y: auto
+  //max-height:
+
+  &.active
+    display: block
