Fixed some defaults cursors and background colours

--- a/proc_vis.sass
+++ b/proc_vis.sass
@@ -21,7 +21,7 @@ svg
   flex: 1
   display: flex
   flex-direction: column
-  background-color: grey
+  //background-color: grey
   min-width: 33%
   max-height: 100vh
 
@@ -100,6 +100,7 @@ svg
 .inputLabel
   font-size: 16pt
   font-family: monospace
+  cursor: pointer
 
 .inputArea
   background-color: lightgoldenrodyellow
@@ -149,6 +150,8 @@ td
     //stroke: white
     stroke-width: 4px
 
+.g-reg
+  cursor: pointer
 .tab
   overflow: hidden
   border: 1px solid #ccc
