--- a/proc_vis.css
+++ b/proc_vis.css
@@ -18,14 +18,9 @@ svg {
   overflow: visible;
 }
 
-.instructions {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-width: 33%;
-  max-height: 100vh;
+.button {
+  cursor: pointer;
 }
-
 .button:hover > .clock-button {
   fill-opacity: 75%;
 }
@@ -71,9 +66,23 @@ svg {
   position: absolute;
   top: 57px;
   left: 670px;
-  width: 188px;
+  width: 218px;
   max-height: 513px;
   overflow-y: auto;
+}
+
+.clock-settings {
+  position: absolute;
+  top: 635px;
+  left: 360px;
+  width: 100px;
+}
+
+#clock-time {
+  width: 100px;
+  font-size: x-large;
+  font-family: monospace;
+  text-align: right;
 }
 
 .ram.read, .register.read, .alu.read {
@@ -143,8 +152,15 @@ td {
   cursor: pointer;
 }
 
+.instructions {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-width: 33%;
+  max-height: 100vh;
+}
+
 .tab {
-  overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
 }
@@ -169,6 +185,7 @@ td {
 }
 
 .tabcontent {
+  flex: 1;
   display: none;
   padding: 6px 12px;
   border: 1px solid #ccc;
@@ -177,6 +194,25 @@ td {
 }
 .tabcontent.active {
   display: block;
+}
+
+.reset-button {
+  fill: seagreen;
+  stroke: darkgreen;
+}
+
+.button:hover > .reset-button {
+  fill: mediumseagreen;
+}
+
+span.mono {
+  font-family: monospace;
+}
+
+@media screen and (max-width: 1350px) {
+  .instructions {
+    max-height: none;
+  }
 }
 
 /*# sourceMappingURL=proc_vis.css.map */
